# ModernCmake_template

./: .gitignore  CMakeLists.txt  Readme.md
app/: CMakeLists.txt  main.c
cmake/: project-meta-info.in
include/: template.h
lib/: CMakeLists.txt
src/: template.c
